# aipnd-project

./: Image_Classifier_Project.ipynb  README.md  checkpoint_vgg16_1.pth  environment.yml  findout.ipynb  pyproject.toml
CLI-App/: utilities.py
CLI-App/arg-templates/: predict_args.json
CLIApp/: predict.py  train.py  utilities.py
CLIApp/arg-templates/: predict_args.json  train_args.json
models/: checkpoint_vgg16_1.pth  resnet18_1.pth  vgg13_1.pth  vgg16_1.pth
