[tool.poetry]
name = "aipnd-project"
version = "0.1.0"
description = ""
authors = ["karencfisher <karen@karencfisher.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
torch = "^2.9.1"
torchvision = "^0.24.1"
numpy = "^2.3.5"
matplotlib = "^3.10.8"
pillow = "^12.0.0"
tqdm = "^4.67.1"
ipykernel = "^7.1.0"
pip = "^25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
